crates/cli/tests/snapshots/snapshots__backspace_merges_continuation_back_into_editor.snap
---
source: crates/cli/tests/snapshots.rs
expression: h.snapshot_screen()
---
Python <version>
Type 'copyright', 'credits' or 'license' for more information
IPython <version>
> print(chr(109) + "erged-backspace-9f31")
merged-backspace-9f31
>
