crates/cli/tests/snapshots/snapshots__banner_renders_before_first_prompt.snap
---
source: crates/cli/tests/snapshots.rs
expression: h.snapshot_screen()
---
Python <version>
                                                            Type 'copyright', 'credits' or 'license' for more information
 IPython 9.15.0 -- An enhanced Interactive Python. Type '?' for help.

>
