crates/cli/tests/snapshots/snapshots__complete_one_liner_executes.snap
---
source: crates/cli/tests/snapshots.rs
expression: h.snapshot_screen()
---
Python <version>
Type 'copyright', 'credits' or 'license' for more information
IPython <version>
> print(1+1)
2
>
