crates/cli/tests/snapshots/snapshots__foreign_attach_session_name_appears_as_prefix.snap
---
source: crates/cli/tests/snapshots.rs
expression: t1.snapshot_screen()
---
Python <version>
Type 'copyright', 'credits' or 'license' for more information
IPython <version>
┌─alpha
│ > print("x")
│ x
>
