crates/cli/tests/snapshots/snapshots__foreign_start_session_name_appears_as_prefix.snap
---
source: crates/cli/tests/snapshots.rs
expression: t2.snapshot_screen()
---
┌ beta ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────
│ > print("y")
│ y
>
