crates/cli/tests/snapshots/snapshots__input_request_displays_and_accepts_value.snap
---
source: crates/cli/tests/snapshots.rs
expression: h.snapshot_screen()
---
Python <version>
Type 'copyright', 'credits' or 'license' for more information
IPython <version>
> v = input('ASK> '); print('GOT:' + v)
ASK> hello-input
GOT:hello-input
>
