crates/cli/tests/snapshots/snapshots__multi_line_function_definition_executes.snap
---
source: crates/cli/tests/snapshots.rs
expression: h.snapshot_screen()
---
Python <version>
Type 'copyright', 'credits' or 'license' for more information
IPython <version>
> def f():
+         return 42
+
> print(f())
42
>
