crates/cli/tests/snapshots/snapshots__single_client_executes_print.snap
---
source: crates/cli/tests/snapshots.rs
expression: h.snapshot_screen()
---
Python <version>
Type 'copyright', 'credits' or 'license' for more information
IPython <version>
> print("hello, jet")
hello, jet
>
