crates/cli/tests/snapshots/snapshots__typing_after_foreign_output_does_not_clear_screen.snap
---
source: crates/cli/tests/snapshots.rs
expression: t1.snapshot_screen()
---
Python <version>
Type 'copyright', 'credits' or 'license' for more information
IPython <version>
┌─jet
│ > print("HELLO_FROM_FOREIGN")
│ HELLO_FROM_FOREIGN
> abc
